{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 77,
  "lineage": "548e7bfd-b663-1ac0-9928-1eb02b9217ec",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727706432228:security-group/sg-0df74898d34cbea3d",
            "description": "Created by RDS management console",
            "filter": null,
            "id": "sg-0df74898d34cbea3d",
            "name": "workflow-rds",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04c0a089dd691442c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "existing_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727706432228:subnet/subnet-023bbd01ab0de7c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 123,
            "cidr_block": "172.30.48.0/25",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023bbd01ab0de7c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727706432228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "RDS-Pvt-subnet-1"
            },
            "vpc_id": "vpc-04c0a089dd691442c"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727706432228:subnet/subnet-025381c28d67cb818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 2034,
            "cidr_block": "172.30.168.0/21",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025381c28d67cb818",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727706432228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "workflow-public-us-east-1f",
              "PROJETO_GET_START": "workflow",
              "nocodetf_customer_id": "acc_F11LW0kJZMCfqKuA2Swlc8YKpRgDtPcsScL1Rgv3",
              "nocodetf_managed": "true",
              "nocodetf_project_id": "prj_wGx0ccK71NByuMxgHxo00b1lSYxNappoB8Srk3O3",
              "nocodetf_project_name": "workflow"
            },
            "vpc_id": "vpc-04c0a089dd691442c"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727706432228:vpc/vpc-04c0a089dd691442c",
            "cidr_block": "172.30.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0386510e517e6ad04",
                "cidr_block": "172.30.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-94f283f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c0a089dd691442c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cf13aaf384eecb84",
            "owner_id": "727706432228",
            "tags": {
              "Name": "workflow",
              "PROJETO_GET_START": "workflow",
              "nocodetf_customer_id": "acc_F11LW0kJZMCfqKuA2Swlc8YKpRgDtPcsScL1Rgv3",
              "nocodetf_managed": "true",
              "nocodetf_project_id": "prj_wGx0ccK71NByuMxgHxo00b1lSYxNappoB8Srk3O3",
              "nocodetf_project_name": "workflow"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:727706432228:loadbalancer/app/cost-reporter-alb/65769574c0a5b028",
            "arn_suffix": "app/cost-reporter-alb/65769574c0a5b028",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cost-reporter-alb-1432920593.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:727706432228:loadbalancer/app/cost-reporter-alb/65769574c0a5b028",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cost-reporter-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02bcf2be50be15754"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023129cfb538b2246"
              },
              {
                "subnet_id": "subnet-0ff23bc6cbd7e239a"
              }
            ],
            "subnets": [
              "subnet-023129cfb538b2246",
              "subnet-0ff23bc6cbd7e239a"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "vpc_id": "vpc-04c0a089dd691442c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:727706432228:listener/app/cost-reporter-alb/65769574c0a5b028/fba1d3a48bc28c2c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:727706432228:listener/app/cost-reporter-alb/65769574c0a5b028/fba1d3a48bc28c2c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:727706432228:loadbalancer/app/cost-reporter-alb/65769574c0a5b028",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:727706432228:listener/app/cost-reporter-alb/65769574c0a5b028/26a90e2e55e1a171",
            "certificate_arn": "arn:aws:acm:us-east-1:727706432228:certificate/6d7c94c2-b1a8-47b9-a1c8-82a8d46024fe",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:727706432228:targetgroup/cost-reporter-api-tg/6f2af0f38230052d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:727706432228:listener/app/cost-reporter-alb/65769574c0a5b028/26a90e2e55e1a171",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:727706432228:loadbalancer/app/cost-reporter-alb/65769574c0a5b028",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.main",
            "aws_acm_certificate_validation.main",
            "aws_lb.main",
            "aws_lb_target_group.api_service",
            "aws_route53_record.cert_validation",
            "aws_security_group.alb",
            "data.aws_route53_zone.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:727706432228:targetgroup/cost-reporter-api-tg/6f2af0f38230052d",
            "arn_suffix": "targetgroup/cost-reporter-api-tg/6f2af0f38230052d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:727706432228:targetgroup/cost-reporter-api-tg/6f2af0f38230052d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:727706432228:loadbalancer/app/cost-reporter-alb/65769574c0a5b028"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cost-reporter-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04c0a089dd691442c"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727706432228:security-group/sg-02bcf2be50be15754",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bcf2be50be15754",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cost-reporter-alb-20250926160628824200000003",
            "name_prefix": "cost-reporter-alb-",
            "owner_id": "727706432228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "cost-reporter-alb-sg",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "cost-reporter-alb-sg",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c0a089dd691442c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727706432228:security-group/sg-06e08a241009393f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e08a241009393f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bcf2be50be15754"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Communication with existing Lambda",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df74898d34cbea3d"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bcf2be50be15754"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cost-reporter-ecs-20250926160633643300000006",
            "name_prefix": "cost-reporter-ecs-",
            "owner_id": "727706432228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "cost-reporter-ecs-sg",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "cost-reporter-ecs-sg",
              "Project": "cost-reporter",
              "Repository": "aws-cost-budget-reporterv2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c0a089dd691442c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_security_group.existing_lambda_sg",
            "data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS to communicate with Lambda",
            "from_port": 0,
            "id": "sgrule-2167302482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0df74898d34cbea3d",
            "security_group_rule_id": "sgr-0447d783347ef7d96",
            "self": false,
            "source_security_group_id": "sg-06e08a241009393f2",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "data.aws_security_group.existing_lambda_sg",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS to access RDS",
            "from_port": 3306,
            "id": "sgrule-1938783701",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f9080f42c167d95f",
            "security_group_rule_id": "sgr-0b1f6f265f7f0140e",
            "self": false,
            "source_security_group_id": "sg-06e08a241009393f2",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "data.aws_db_instance.existing",
            "data.aws_security_group.existing_lambda_sg",
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}